add cq override
