# server/src/domain/system-config/system-config.core.ts
@@ -1,5 +1,6 @@
 import {
   AudioCodec,
+  CQMode,
   SystemConfig,
   SystemConfigEntity,
   SystemConfigKey,
@@ -30,6 +31,7 @@ export const defaults = Object.freeze<SystemConfig>({
     bframes: -1,
     refs: 0,
     gopSize: 0,
+    cqMode: CQMode.AUTO,
     twoPass: false,
     transcode: TranscodePolicy.REQUIRED,
     tonemap: ToneMapping.HABLE,
@@ -83,7 +85,7 @@ export class SystemConfigCore {
 
   public config$ = singleton;
 
-  constructor(private repository: ISystemConfigRepository) {}
+  constructor(private repository: ISystemConfigRepository) { }
 
   public getDefaults(): SystemConfig {
     return defaults;
